@@ -2,6 +2,7 @@ package br.com.cabidiomas.student.repository;
 
 import br.com.cabidiomas.student.model.Const;
 import br.com.cabidiomas.student.model.Role;
+import br.com.cabidiomas.student.model.RolesEnum;
 import br.com.cabidiomas.student.model.Usuario;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationListener;
@@ -30,18 +31,18 @@ public class DataInitializr implements ApplicationListener<ContextRefreshedEvent
         List<Usuario> users = userRepository.findAll();
 
         if (users.isEmpty()) {
-            createUser("Admin", "admin", passwordEncoder.encode("123456"), Const.ROLE_ADMIN);
-            createUser("Cliente", "cliente", passwordEncoder.encode("123456"), Const.ROLE_CLIENT);
+            createUser("Admin", "admin", passwordEncoder.encode("123456"), RolesEnum.ADMIN);
+            createUser("Cliente", "cliente", passwordEncoder.encode("123456"), RolesEnum.STUDENT);
         }
 
     }
 
-    public void createUser(String name, String email, String password, String roleName) {
+    public void createUser(String name, String email, String password, RolesEnum rolesEnum) {
 
-        Role role = Role.builder().name(roleName).build();
+        Role role = Role.builder().name(rolesEnum.name()).id(rolesEnum.getId()).build();
 
         this.roleRepository.save(role);
-        Usuario user = Usuario.builder().username(name).password(password).roles(Arrays.asList(role)).build();
+        Usuario user = Usuario.builder().name(name).login(email).password(password).roles(List.of(role)).build();
         userRepository.save(user);
     }
 }
